--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^3.2.47",
+    "vue-comment-grid": "^1.0.12",
     "vue-router": "^4.1.6",
     "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.2.0"
