--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue-comment-grid": "^1.0.12",
     "vue-router": "^4.1.6",
     "vue-toastification": "^2.0.0-rc.5",
-    "vuetify": "^3.2.0"
+    "vuetify": "^3.2.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
